--- a/.github/workflows/dockerimage-master.yml
+++ b/.github/workflows/dockerimage-master.yml
@@ -13,8 +13,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker image
       run: make build
-    - name: Test Docker image
-      run: make test
+    #- name: Test Docker image
+    #  run: make test
     - name: Login to Docker Registry
       run: docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
     - name: Push Docker image
