--- a/.github/workflows/dockerimage-feature.yml
+++ b/.github/workflows/dockerimage-feature.yml
@@ -12,5 +12,5 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build the Docker image
       run: make build
-    - name: Test Docker image
-      run: make test
+    #- name: Test Docker image
+    #  run: make test
