--- a/.github/workflows/dockerimage-master.yml
+++ b/.github/workflows/dockerimage-master.yml
@@ -16,6 +16,6 @@ jobs:
     #- name: Test Docker image
     #  run: make test
     - name: Login to Docker Registry
-      run: docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
+      run: docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }} quay.io
     - name: Push Docker image
       run: make push
